--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2025 <span>Pradeep P</span> · All rights reserved</p>
+            <p>© 2025 <span>Pradeep</span> · All rights reserved</p>
             <span class="footer-badge">Portfolio · 2025</span>
         </div>
     </footer>
@@ -403,7 +403,7 @@
             <div class="ch-info">
                 <div class="chat-avatar"><i class="bi bi-person-fill"></i></div>
                 <div>
-                    <div class="chat-name">Pradeep P</div>
+                    <div class="chat-name">Pradeep</div>
                     <div class="chat-status">🟢 Online · Replies instantly</div>
                 </div>
             </div>
@@ -431,5 +431,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
